// Vitest Snapshot v1

exports[`contentlayer addDocumentType transform > should be inserted after imports if no other defineDocumentType 1`] = `
"
      import { defineDocumentType, makeSource } from 'contentlayer/source-files'
      import rehypeCitation from 'rehype-citation'

      const Blog = defineDocumentType(() => ({
        'name': 'Blog',
        'filePathPattern': 'blog/**/*.mdx',
        'contentType': 'mdx',

        'fields': {
          'title': {
            'type': 'string',
            'required': true
          },

          'date': {
            'type': 'date',
            'required': true
          }
        }
      }));

      export default makeSource({
        /* options */
      })
    "
`;

exports[`contentlayer addDocumentType transform > should be inserted after other defineDocumentType 1`] = `
"
      import { defineDocumentType, makeSource } from 'contentlayer/source-files'
      import rehypeCitation from 'rehype-citation'

      const Blog = defineDocumentType(() => ({}))
      export const Author = defineDocumentType(() => ({}))

      const Blog = defineDocumentType(() => ({
        'name': 'Blog',
        'filePathPattern': 'blog/**/*.mdx',
        'contentType': 'mdx',

        'fields': {
          'title': {
            'type': 'string',
            'required': true
          },

          'date': {
            'type': 'date',
            'required': true
          }
        }
      }));

      export default makeSource({
        /* options */
      })
    "
`;
